# multistage-docker

./: Dockerfile  README.md  docker-compose.yml  poetry-ms.Dockerfile  pyproject.toml  venv-ms.Dockerfile
src/: app.py
