[tool.poetry]
name = "multistage"
version = "0.1.0"
description = ""
authors = ["netr0m <netr0m@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
pyodbc = "^4.0.32"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
